--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,14 @@
   --foreground: #333333;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-poppins);
   --font-mono: var(--font-poppins);
   --font-cinzel: var(--font-cinzel);
   --font-poppins: var(--font-poppins);
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
